@@ -112,6 +112,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|WeakHashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|security
 operator|.
 name|AccessController
@@ -835,6 +855,26 @@ name|isClone
 init|=
 literal|false
 decl_stmt|;
+DECL|field|clones
+specifier|private
+specifier|final
+name|Map
+argument_list|<
+name|MMapIndexInput
+argument_list|,
+name|Boolean
+argument_list|>
+name|clones
+init|=
+operator|new
+name|WeakHashMap
+argument_list|<
+name|MMapIndexInput
+argument_list|,
+name|Boolean
+argument_list|>
+argument_list|()
+decl_stmt|;
 DECL|method|MMapIndexInput
 name|MMapIndexInput
 parameter_list|(
@@ -1126,6 +1166,22 @@ name|get
 argument_list|()
 return|;
 block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|npe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"MMapIndexInput already closed: "
+operator|+
+name|this
+argument_list|)
+throw|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -1257,6 +1313,22 @@ name|len
 argument_list|)
 expr_stmt|;
 block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|npe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"MMapIndexInput already closed: "
+operator|+
+name|this
+argument_list|)
+throw|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -1289,6 +1361,22 @@ operator|.
 name|readShort
 argument_list|()
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|npe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"MMapIndexInput already closed: "
+operator|+
+name|this
+argument_list|)
+throw|;
 block|}
 block|}
 annotation|@
@@ -1323,6 +1411,22 @@ name|readInt
 argument_list|()
 return|;
 block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|npe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"MMapIndexInput already closed: "
+operator|+
+name|this
+argument_list|)
+throw|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -1355,6 +1459,22 @@ operator|.
 name|readLong
 argument_list|()
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|npe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"MMapIndexInput already closed: "
+operator|+
+name|this
+argument_list|)
+throw|;
 block|}
 block|}
 annotation|@
@@ -1513,6 +1633,22 @@ name|this
 argument_list|)
 throw|;
 block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|npe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"MMapIndexInput already closed: "
+operator|+
+name|this
+argument_list|)
+throw|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -1569,6 +1705,16 @@ name|isClone
 operator|=
 literal|true
 expr_stmt|;
+comment|// we keep clone.clones, so it shares the same map with original and we have no additional cost on clones
+assert|assert
+name|clone
+operator|.
+name|clones
+operator|==
+name|this
+operator|.
+name|clones
+assert|;
 name|clone
 operator|.
 name|buffers
@@ -1581,8 +1727,6 @@ operator|.
 name|length
 index|]
 expr_stmt|;
-comment|// Since most clones will use only one buffer, duplicate() could also be
-comment|// done lazy in clones, e.g. when adapting curBuf.
 for|for
 control|(
 name|int
@@ -1645,9 +1789,50 @@ name|ioe
 argument_list|)
 throw|;
 block|}
+comment|// register the new clone in our clone list to clean it up on closing:
+synchronized|synchronized
+init|(
+name|this
+operator|.
+name|clones
+init|)
+block|{
+name|this
+operator|.
+name|clones
+operator|.
+name|put
+argument_list|(
+name|clone
+argument_list|,
+name|Boolean
+operator|.
+name|TRUE
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 name|clone
 return|;
+block|}
+DECL|method|unsetBuffers
+specifier|private
+name|void
+name|unsetBuffers
+parameter_list|()
+block|{
+name|buffers
+operator|=
+literal|null
+expr_stmt|;
+name|curBuf
+operator|=
+literal|null
+expr_stmt|;
+name|curBufIndex
+operator|=
+literal|0
+expr_stmt|;
 block|}
 annotation|@
 name|Override
@@ -1659,14 +1844,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|curBuf
-operator|=
-literal|null
-expr_stmt|;
-name|curBufIndex
-operator|=
-literal|0
-expr_stmt|;
 try|try
 block|{
 if|if
@@ -1678,6 +1855,56 @@ operator|==
 literal|null
 condition|)
 return|return;
+comment|// for extra safety unset also all clones' buffers:
+synchronized|synchronized
+init|(
+name|this
+operator|.
+name|clones
+init|)
+block|{
+for|for
+control|(
+specifier|final
+name|MMapIndexInput
+name|clone
+range|:
+name|this
+operator|.
+name|clones
+operator|.
+name|keySet
+argument_list|()
+control|)
+block|{
+assert|assert
+name|clone
+operator|.
+name|isClone
+assert|;
+name|clone
+operator|.
+name|unsetBuffers
+argument_list|()
+expr_stmt|;
+block|}
+name|this
+operator|.
+name|clones
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+block|}
+name|curBuf
+operator|=
+literal|null
+expr_stmt|;
+name|curBufIndex
+operator|=
+literal|0
+expr_stmt|;
+comment|// nuke curr pointer early
 for|for
 control|(
 name|int
@@ -1695,9 +1922,6 @@ name|bufNr
 operator|++
 control|)
 block|{
-comment|// unmap the buffer (if enabled) and at least unset it for GC
-try|try
-block|{
 name|cleanMapping
 argument_list|(
 name|buffers
@@ -1707,25 +1931,49 @@ index|]
 argument_list|)
 expr_stmt|;
 block|}
-finally|finally
-block|{
-name|buffers
-index|[
-name|bufNr
-index|]
-operator|=
-literal|null
-expr_stmt|;
-block|}
-block|}
 block|}
 finally|finally
 block|{
-name|buffers
-operator|=
-literal|null
+name|unsetBuffers
+argument_list|()
 expr_stmt|;
 block|}
+block|}
+comment|// make sure we have identity on equals/hashCode for WeakHashMap
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+return|return
+name|System
+operator|.
+name|identityHashCode
+argument_list|(
+name|this
+argument_list|)
+return|;
+block|}
+comment|// make sure we have identity on equals/hashCode for WeakHashMap
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+return|return
+name|obj
+operator|==
+name|this
+return|;
 block|}
 block|}
 block|}
