@@ -30,6 +30,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Random
@@ -216,6 +226,161 @@ operator|.
 name|mkdirs
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|testCloneSafety
+specifier|public
+name|void
+name|testCloneSafety
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MMapDirectory
+name|mmapDir
+init|=
+operator|new
+name|MMapDirectory
+argument_list|(
+name|_TestUtil
+operator|.
+name|getTempDir
+argument_list|(
+literal|"testCloneSafety"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexOutput
+name|io
+init|=
+name|mmapDir
+operator|.
+name|createOutput
+argument_list|(
+literal|"bytes"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|io
+operator|.
+name|writeVInt
+argument_list|(
+literal|5
+argument_list|)
+expr_stmt|;
+name|io
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexInput
+name|one
+init|=
+name|mmapDir
+operator|.
+name|openInput
+argument_list|(
+literal|"bytes"
+argument_list|,
+name|IOContext
+operator|.
+name|DEFAULT
+argument_list|)
+decl_stmt|;
+name|IndexInput
+name|two
+init|=
+operator|(
+name|IndexInput
+operator|)
+name|one
+operator|.
+name|clone
+argument_list|()
+decl_stmt|;
+name|IndexInput
+name|three
+init|=
+operator|(
+name|IndexInput
+operator|)
+name|two
+operator|.
+name|clone
+argument_list|()
+decl_stmt|;
+comment|// clone of clone
+name|one
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|one
+operator|.
+name|readVInt
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Must throw AlreadyClosedException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AlreadyClosedException
+name|ignore
+parameter_list|)
+block|{
+comment|// pass
+block|}
+try|try
+block|{
+name|two
+operator|.
+name|readVInt
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Must throw AlreadyClosedException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AlreadyClosedException
+name|ignore
+parameter_list|)
+block|{
+comment|// pass
+block|}
+try|try
+block|{
+name|three
+operator|.
+name|readVInt
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Must throw AlreadyClosedExveption"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AlreadyClosedException
+name|ignore
+parameter_list|)
+block|{
+comment|// pass
+block|}
 block|}
 DECL|method|testSeekZero
 specifier|public
